--- a/HTML_Quiz/index.html
+++ b/HTML_Quiz/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="quiz made with freeCodeCamp course"
     <link href="styles.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Accessibility Quiz</title>
 </head>
 <body>
     
