--- a/HTML_Quiz/index.html
+++ b/HTML_Quiz/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="quiz made with freeCodeCamp course"
-    <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
     <title>Accessibility Quiz</title>
 </head>
 <body>
