--- a/HTML_Quiz/index.html
+++ b/HTML_Quiz/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="freeCodeCamp Accessibility Quiz practice project" />
+    <meta name="description" content="freeCodeCamp Quiz practice project" />
     <title>Accessibility Quiz</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
-      <img id="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg">
+      <img id="logo" src="game-pad1.png">
       <h1>HTML/CSS Quiz</h1>
       <nav>
         <ul>
@@ -111,10 +111,7 @@
     </main>
     <footer>
       <address>
-        <a href="https://freecodecamp.org">freeCodeCamp</a><br />
-        San Francisco<br />
-        California<br />
-        USA
+        <a href="https://github.com/Olkania">Gad.Alex</a><br />
       </address>
     </footer>
   </body>
