--- a/HTML_TPage/index.html
+++ b/HTML_TPage/index.html
@@ -3,21 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheets">
+    <link href="styles.css" rel="stylesheet">
     <title>Tribute Page</title>
 </head>
-<body>
-    <main id="main">
-        <h1 id="title">Matthew Perry (? albo inny aktor bliski sercu albo jaakis bohaater gier)</h1>
-        <p>The man who made a bilion people laugh.</p>
-        <div id="img-div">
-            <img src="mp.jpg" id="image" alt="Matthew Perry photo">
-            <p id="img-caption"></p>
+        <body>
+            <main id="main">
+                <div class="header">
+            <h1 id="title">Matthew Perry</h1>
+            <p>The man who made a billion people laugh.</p>
         </div>
-        <div id="info-div">
-            <p id="tribute-info"></p>
-        </div>
-        <p>ninowcxn <a id="tribute-link" href="https://www.imdb.com/name/nm0001612/">link</a></p>
+        <figure id="img-div">
+            <img
+              id="image"
+              src="mp_1.jpeg"
+              alt="Matthew Perry photo in his 20s"
+            />
+            <figcaption id="img-caption">
+                Mathew Perry in his 20s
+            </figcaption>
+          </figure>
+        <section id="tribute-info">
+            <h3>Important dates in Mathew's Perry life: </h3>
+            <ul>
+                <li><strong>August 19, 1969</strong> - Matthew Perry was born</li>
+                <li><strong>1987</strong> - first apperance in a TV show called <p class="italic">Second Chance</p></li>
+                <li><strong>1988</strong> - debut in a supporting role in a film <p class="italic">A Night in the Life of Jimmy Reardon</p></li>
+                <li><strong>1994 – 2004 </strong> - being Chandler Bing in TV show<p class="italic">Friends</p></li>
+                <li><strong>2009</strong> - played with Zac Efron as adult Mike O'Donnell <p class="italic">17 Again</p></li>
+                <li><strong>2010</strong> - voice of Benny in a video game called <p class="italic">Fallout: New Vegas</p></li>
+                <li><strong>2015 – 2017 </strong> - played as Oscar Madinson in <p class="italic">The Old Couple</p></li>
+                <li><strong>2022 </strong> - published autobiography <p class="italic">Friends, Lovers and the Big Terrible Thing</p></li>
+                <li><strong>October 28, 2023</strong> - Matthew Perry died at age 54</li>
+            </ul>
+    </section>
+        <p class="bottom-space">If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://www.imdb.com/name/nm0001612/" target="_blank">IMDB entry</a>.</p>
     </main>
 </body>
 </html>
