--- a/HTML_TechDoc/index.html
+++ b/HTML_TechDoc/index.html
@@ -4,9 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" rel="stylesheet">
-    <title>Techical Documentation Page</title>
+    <title>Technical Documentation Page</title>
 </head>
 <body>
-    
+    <nav id="navbar">
+        <header>
+            Unity Manual
+        </header>
+    </nav>
+    <main id="main-doc">
+        <section class="main-section">
+            <header id="Unity_User_Manual">
+                Unity User Manual
+            </header>
+            <article>
+                <p>
+                    Use the Unity Editor to create 2D and 3D games, apps, and experiences. Download the Editor at unity3d.com.<br>
+                    The Unity User Manual helps you learn how to use the Unity Editor and its associated services. You can read it from start to finish, or use it as a reference.<br>
+                    If it’s your first time using Unity, take a look at the introductory documentation on Working with Unity, and refer to the Unity Tutorials.<br>
+                </p>
+                <p class="bold"> 
+                    <ul>New
+                        <li>Features introduced in 2022 LTS: <a href="https://docs.unity3d.com/Manual/WhatsNew2022LTS.html"> What's New</a></li>
+                        <li>Upgrading Unity projects from older versions of Unity: <a href="https://docs.unity3d.com/Manual/UpgradeGuide2022LTS.html">Upgrade Guide</a></li>
+                    </ul>
+                    <ul>Packages
+                        <li>Learn about packages:<a href="https://docs.unity3d.com/Manual/Packages.html"> Working with the Package Manager</a></li>
+                        <li>Find documentation for a specific package: <a href="https://docs.unity3d.com/Manual/pack-safe.html"> Verified packages</a> and <a href="https://docs.unity3d.com/Manual/pack-preview.html">Preview packages</a></li>
+                        <li>Learn how to build a custom package: <a href="https://docs.unity3d.com/Manual/CustomPackages.html"> Creating custom packages</a></li>
+                    </ul>
+                </p>
+            </article>
+        </section>
+        <section class="main-section">
+            <header id="Packages_and_feature_sets">
+                Packages and feature sets
+            </header>
+            <p>
+                A package contains features to fit the various needs of your project. This can include any core Unity features included during the Editor installation, or other packages that you can install as needed.
+            </p>
+            <p>
+                <table>
+                    <tr>
+                        <th>
+                            Topic 
+                        </th>
+                        <th>
+                            Description
+                        </th>
+                    </tr>
+
+                    <tr>
+                        <td><code>Released packages</code>, <code> Pre-release packages</code> </td>
+                        <td>View the lists of supported packages for this version of the Unity Editor, and learn about the criteria a package must meet to be in these states.</td>
+                    </tr>
+                    <tr>
+                        <td><code>Release candidates</code></td>
+                        <td>Learn about the criteria a package must meet for being a Release candidate.</td>
+                    </tr>
+                    <tr>
+                        <td><code>Core packages</code></td>
+                        <td>View the list of packages that are bound to this version of the Unity Editor.</td>
+                    </tr>
+                    <tr>
+                        <td><code>Built-in packages</code></td>
+                        <td>View the list of built-in packages, which you can enable or disable to adjust the runtime build size.</td>
+                    </tr>
+                    <tr>
+                        <td><code>Experimental packages</code></td>
+                        <td>Learn about unsupported packages that are in the early stages of development.</td>
+                    </tr>
+                </table>
+            </p>
+        </section>
+        <section class="main-section">
+            <header id="Working_in_Unity">
+                Working in Unity
+            </header>
+            <p>This section explains the Unity interface, menu items, using Assets, creating Scenes, and publishing builds:
+                <ul>
+                    <li><a href="https://docs.unity3d.com/Manual/GettingStartedInstallingUnity.html"> Installing Unity</a> <br>
+                        Downloading, installing, and activating Unity, using the Hub, and how to manage your licenses.</li>
+                        <li><a href="https://docs.unity3d.com/Manual/CreatingGameplay.html">Creating Gameplay</a>  <br>
+                            How to get started making Scenes, GameObjects and Components; reading input; and adding gameplay or interactivity to your Project.</li>
+                            <li><a href="https://docs.unity3d.com/Manual/EditorFeatures.html">Editor Features</a> <br>
+                                Information about many of the Editor’s powerful features, to help you customize your workflow, integrate with external tools, and extend the Editor itself.</li>
+                </ul>
+            </p>
+        </section>
+        <section class="main-section">
+            <header id="Graphics">
+                Graphics
+            </header>
+            <p>
+                Unity’s graphics features let you control the appearance of your application and are highly customizable. You can use Unity’s graphics features to create beautiful, optimized graphics across a range of platforms, from mobile to high-end consoles and desktop.
+                <ul> This section contains information on the following graphics features:
+                    <li>Render pipelines</li>
+                    <li>Cameras</li>
+                    <li>Lighting section</li>
+                    <li>Creating environments</li>
+                    <li>Meshes, Materials, Textures, and Shaders</li>
+                    <li>Visual Effects</li>
+                    <li>Optimizing Graphics Performance</li>
+                </ul>
+            </p>
+        </section>
+        <section class="main-section">
+            <header id="Unity_Search">
+                Unity Search
+            </header>
+
+            <p>
+                Use Search to search sources inside of Unity and perform actions on the results. <br>
+                For example, from the Search window you can find Assets and open them, find Unity packages and install them, or find menu commands and run them. <br>
+                To launch Search use the <code>Ctrl + K</code>  shortcut, click the magnifying glass icon in the top right of the Editor window, or use the menu (<code>Edit > Search All</code>).
+            </p>
+        </section>
+    </main>
 </body>
 </html>
