html added naigation bar

--- a/HTML_TechDoc/index.html
+++ b/HTML_TechDoc/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
     <nav id="navbar">
-        <header>
-            Unity Manual
-        </header>
+        <header>Unity Manual</header>
+        <ul>
+            <li><a href="#Unity_User_Manual">Unity User Manual</a></li>
+            <li><a href="#Packages_and_feature_sets">Packages and feature sets</a></li>
+            <li><a href="#Working_in_Unity">Working in Unity</a></li>
+            <li><a href="#Graphics">Graphics</a></li>
+            <li><a href="#Unity_Search">Unity Search</a></li>
+        </ul>
     </nav>
     <main id="main-doc">
         <section class="main-section">
