--- a/HTML_TechDoc/index.html
+++ b/HTML_TechDoc/index.html
@@ -22,24 +22,22 @@
             <header id="Unity_User_Manual">
                 Unity User Manual
             </header>
-            <article>
                 <p>
                     Use the Unity Editor to create 2D and 3D games, apps, and experiences. Download the Editor at unity3d.com.<br>
                     The Unity User Manual helps you learn how to use the Unity Editor and its associated services. You can read it from start to finish, or use it as a reference.<br>
                     If it’s your first time using Unity, take a look at the introductory documentation on Working with Unity, and refer to the Unity Tutorials.<br>
                 </p>
-                <p class="bold"> 
-                    <ul>New
-                        <li>Features introduced in 2022 LTS: <a href="https://docs.unity3d.com/Manual/WhatsNew2022LTS.html"> What's New</a></li>
-                        <li>Upgrading Unity projects from older versions of Unity: <a href="https://docs.unity3d.com/Manual/UpgradeGuide2022LTS.html">Upgrade Guide</a></li>
+                <p> 
+                    <ul class="main-list"><span>New</span>                        
+                        <li>Features introduced in 2022 LTS: <a href="https://docs.unity3d.com/Manual/WhatsNew2022LTS.html" target="_blank"> What's New</a></li>
+                        <li>Upgrading Unity projects from older versions of Unity: <a href="https://docs.unity3d.com/Manual/UpgradeGuide2022LTS.html" target="_blank">Upgrade Guide</a></li>
                     </ul>
-                    <ul>Packages
-                        <li>Learn about packages:<a href="https://docs.unity3d.com/Manual/Packages.html"> Working with the Package Manager</a></li>
-                        <li>Find documentation for a specific package: <a href="https://docs.unity3d.com/Manual/pack-safe.html"> Verified packages</a> and <a href="https://docs.unity3d.com/Manual/pack-preview.html">Preview packages</a></li>
-                        <li>Learn how to build a custom package: <a href="https://docs.unity3d.com/Manual/CustomPackages.html"> Creating custom packages</a></li>
+                    <ul class="main-list"><span>Packages</span>
+                        <li>Learn about packages:<a href="https://docs.unity3d.com/Manual/Packages.html" target="_blank"> Working with the Package Manager</a></li>
+                        <li>Find documentation for a specific package: <a href="https://docs.unity3d.com/Manual/pack-safe.html" target="_blank"> Verified packages</a> and <a href="https://docs.unity3d.com/Manual/pack-preview.html" target="_blank">Preview packages</a></li>
+                        <li>Learn how to build a custom package: <a href="https://docs.unity3d.com/Manual/CustomPackages.html" target="_blank"> Creating custom packages</a></li>
                     </ul>
                 </p>
-            </article>
         </section>
         <section class="main-section">
             <header id="Packages_and_feature_sets">
@@ -88,11 +86,11 @@
             </header>
             <p>This section explains the Unity interface, menu items, using Assets, creating Scenes, and publishing builds:
                 <ul>
-                    <li><a href="https://docs.unity3d.com/Manual/GettingStartedInstallingUnity.html"> Installing Unity</a> <br>
+                    <li><a href="https://docs.unity3d.com/Manual/GettingStartedInstallingUnity.html" target="_blank"> Installing Unity</a> <br>
                         Downloading, installing, and activating Unity, using the Hub, and how to manage your licenses.</li>
-                        <li><a href="https://docs.unity3d.com/Manual/CreatingGameplay.html">Creating Gameplay</a>  <br>
+                        <li><a href="https://docs.unity3d.com/Manual/CreatingGameplay.html" target="_blank">Creating Gameplay</a>  <br>
                             How to get started making Scenes, GameObjects and Components; reading input; and adding gameplay or interactivity to your Project.</li>
-                            <li><a href="https://docs.unity3d.com/Manual/EditorFeatures.html">Editor Features</a> <br>
+                            <li><a href="https://docs.unity3d.com/Manual/EditorFeatures.html" target="_blank">Editor Features</a> <br>
                                 Information about many of the Editor’s powerful features, to help you customize your workflow, integrate with external tools, and extend the Editor itself.</li>
                 </ul>
             </p>
@@ -103,7 +101,7 @@
             </header>
             <p>
                 Unity’s graphics features let you control the appearance of your application and are highly customizable. You can use Unity’s graphics features to create beautiful, optimized graphics across a range of platforms, from mobile to high-end consoles and desktop.
-                <ul> This section contains information on the following graphics features:
+                <ul class="main-list"> This section contains information on the following graphics features:
                     <li>Render pipelines</li>
                     <li>Cameras</li>
                     <li>Lighting section</li>
