--- a/HTML_TechDoc/index.html
+++ b/HTML_TechDoc/index.html
@@ -10,15 +10,15 @@
     <nav id="navbar">
         <header>Unity Manual</header>
         <ul>
-            <li><a href="#Unity_User_Manual">Unity User Manual</a></li>
-            <li><a href="#Packages_and_feature_sets">Packages and feature sets</a></li>
-            <li><a href="#Working_in_Unity">Working in Unity</a></li>
-            <li><a href="#Graphics">Graphics</a></li>
-            <li><a href="#Unity_Search">Unity Search</a></li>
+            <li><a href="#Unity_User_Manual" class="nav-link">Unity User Manual</a></li>
+            <li><a href="#Packages_and_feature_sets" class="nav-link">Packages and feature sets</a></li>
+            <li><a href="#Working_in_Unity" class="nav-link">Working in Unity</a></li>
+            <li><a href="#Graphics" class="nav-link">Graphics</a></li>
+            <li><a href="#Unity_Search" class="nav-link">Unity Search</a></li>
         </ul>
     </nav>
     <main id="main-doc">
-        <section class="main-section">
+        <section class="main-section" id="Unity_User_Manual">
             <header id="Unity_User_Manual">
                 Unity User Manual
             </header>
@@ -39,7 +39,7 @@
                     </ul>
                 </p>
         </section>
-        <section class="main-section">
+        <section class="main-section" id="Packages_and_feature_sets">
             <header id="Packages_and_feature_sets">
                 Packages and feature sets
             </header>
@@ -80,7 +80,7 @@
                 </table>
             </p>
         </section>
-        <section class="main-section">
+        <section class="main-section" id="Working_in_Unity">
             <header id="Working_in_Unity">
                 Working in Unity
             </header>
@@ -95,7 +95,7 @@
                 </ul>
             </p>
         </section>
-        <section class="main-section">
+        <section class="main-section" id="Graphics">
             <header id="Graphics">
                 Graphics
             </header>
@@ -112,7 +112,7 @@
                 </ul>
             </p>
         </section>
-        <section class="main-section">
+        <section class="main-section" id="Unity_Search">
             <header id="Unity_Search">
                 Unity Search
             </header>
