html added main

--- a/CSS_Magazine/index.html
+++ b/CSS_Magazine/index.html
@@ -9,6 +9,10 @@
     <link href="./styles.css" rel="stylesheet"/>
 </head>
 <body>
-    
+    <main>
+        <section class="heading">
+        </section>
+        </main>
+      
 </body>
 </html>
