--- a/HTML_LandingPage/index.html
+++ b/HTML_LandingPage/index.html
@@ -14,12 +14,32 @@
             </div>
             <nav id="nav-bar">
                 <ul>
-                    <li><a class="nav-link" href="">Features</a></li>
+                    <li><a class="nav-link" href="#features">Features</a></li>
                     <li><a class="nav-link" href="">Examples</a></li>
                     <li><a class="nav-link" href="">Pricing</a></li>
                 </ul>
             </nav>
         </header>
+        <div class="container">
+            <section class="features">
+                <div class="grid">
+                    <div class="icon">
+                        <img>
+                    </div>
+                    <div class="desc">
+                        <h2></h2>
+                        <p></p>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <section id="hero">
+            <h2>Handmade plushies, customized as you want</h2>
+            <form id="form" action="https://www.handmadeplushies.com/email-submit">
+                <input name="email" id="email" type="email" placeholder="Enter your email address" required="">
+                <input id="submit" type="submit" value="Get Started" class="button">
+              </form>
+        </section>
     </div>
 </body>
 </html>
